--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header class="hero">
-      <nav class="navbar">
-        <div class="logo">LOGO</div>
-        <a href="#" class="btn">Sign Up</a>
-      </nav>
+    <!-- Navigation -->
+    <nav class="navbar">
+      <div class="logo">LOGO</div>
+      <button class="nav-button">Sign Up</button>
+    </nav>
 
+    <!-- Hero Section -->
+    <section class="hero">
       <div class="hero-content">
         <h1>Cool Dark UI Template for<br />Webflow Agencies!</h1>
-        <a href="#" class="btn main-btn">Stay Focused</a>
+        <button class="cta-button">Stay Focused</button>
       </div>
-    </header>
+    </section>
   </body>
 </html>
