--- a/index.html
+++ b/index.html
@@ -20,5 +20,24 @@
         <button class="cta-button">Stay Focused</button>
       </div>
     </section>
+
+    <!-- Action Section -->
+    <section class="action-section">
+      <div class="container">
+        <div class="action-content">
+          <div class="action-text">
+            <h2>See It in Action</h2>
+            <p>
+              Explore the live preview and imagine your brand in this bold new
+              look.
+            </p>
+            <button class="cta-button">Launch Live Preview</button>
+          </div>
+          <div class="action-image">
+            <img src="/media/wc-mini.png" alt="Webflow Conf 2022 preview" />
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
