Added stats ( but need to round the stats )

--- a/index.html
+++ b/index.html
@@ -39,5 +39,28 @@
         </div>
       </div>
     </section>
+
+    <!-- Stats Section -->
+    <section class="stats-section">
+      <div class="container">
+        <div class="stats-content">
+          <h2>Joined Thousands of Productive Users</h2>
+          <div class="stats-grid">
+            <div class="stat-item">
+              <span class="stat-number">50K</span>
+              <span class="stat-label">Active Users</span>
+            </div>
+            <div class="stat-item">
+              <span class="stat-number">2M+</span>
+              <span class="stat-label">Focus Sessions</span>
+            </div>
+            <div class="stat-item">
+              <span class="stat-number">95%</span>
+              <span class="stat-label">Satisfaction Rate</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
