Testimonials done yay

--- a/index.html
+++ b/index.html
@@ -62,5 +62,76 @@
         </div>
       </div>
     </section>
+
+    <!-- Testimonials Section -->
+    <section class="testimonials-section">
+      <div class="container">
+        <div class="testimonials-content">
+          <h2>What our users say</h2>
+          <div class="testimonials-grid">
+            <div class="testimonial-card">
+              <div class="stars">
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+              </div>
+              <h3>I love Chatgpt</h3>
+              <p class="testimonial-text">
+                "I used Chatgpt to make it responsive"
+              </p>
+              <div class="testimonial-author">
+                <div class="author-avatar"></div>
+                <div class="author-info">
+                  <h4>Mahir</h4>
+                  <p>12/7/2025</p>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-card">
+              <div class="stars">
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+              </div>
+              <h3>I am Late</h3>
+              <p class="testimonial-text">
+                "I was late cause of the amount of Homeworks i had"
+              </p>
+              <div class="testimonial-author">
+                <div class="author-avatar"></div>
+                <div class="author-info">
+                  <h4>Me again</h4>
+                  <p>12/7/25</p>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-card">
+              <div class="stars">
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+              </div>
+              <h3>Trying to keep up</h3>
+              <p class="testimonial-text">
+                "Only have 2 days free unfortunately"
+              </p>
+              <div class="testimonial-author">
+                <div class="author-avatar"></div>
+                <div class="author-info">
+                  <h4>Obivously me</h4>
+                  <p>12/7/25</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
