--- a/index.html
+++ b/index.html
@@ -133,5 +133,61 @@
         </div>
       </div>
     </section>
+
+    <!-- Contact Section -->
+    <section class="contact-section">
+      <div class="container">
+        <div class="contact-content">
+          <div class="contact-text">
+            <h2>Let's Get in Touch</h2>
+          </div>
+          <div class="contact-form">
+            <form>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input
+                  type="email"
+                  id="email"
+                  placeholder="example@email.com"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" id="name" placeholder="Full name" required />
+              </div>
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea
+                  id="message"
+                  placeholder="Write your message...."
+                  required
+                ></textarea>
+              </div>
+              <button type="submit" class="submit-button">Get in Touch</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-logo">LOGO</div>
+          <p class="footer-text">
+            Ready to elevate your online presence? Contact us today to discuss
+            your project and discover how we can bring your vision to life.
+          </p>
+          <div class="footer-links">
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#services">How it Works</a>
+            <a href="#contact">Services</a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
