--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <button class="cta-button">Launch Live Preview</button>
           </div>
           <div class="action-image">
-            <img src="/media/wc-mini.png" alt="Webflow Conf 2022 preview" />
+            <img src="media/wc-mini.png" alt="Webflow Conf 2022 preview" />
           </div>
         </div>
       </div>
